2005-11-25  Russell Bryant  <russell@digium.com>

	* apps/app_dial.c: Properly duplicate the string for ANI (issue #5850)

2005-11-23  Russell Bryant  <russell@digium.com>

	* configs/voicemail.conf.sample: Add note to indicate that #include should not be used for this file. (issue #5828)

2005-11-23  Josh Roberson <josh@asteriasgi.com>

	* configs/indications.conf.sample: Fix misspellings of cadence (issue #5826)
	* include/asterisk/indications.h: Fix misspellings of cadence (issue #5826)
	* res/res_indications.c: Fix misspellings of cadence (issue #5826)
	* indications.c: Fix misspellings of cadence (issue #5826)

2005-11-22  Josh Roberson <josh@asteriasgi.com>

	* apps/app_voicemail.c: Remove "yay!" message.  (issue #5829)

2005-11-21  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_cut.c: remove unnecessary include that causes spurious rebuilding

	* channels/chan_sip.c (build_peer): ensure that case changes made to peer names are not ignored during reload operations
	(build_peer): when a peer is changed from dynamic to static mode, reset the default port number if no other has been specified

	* channels/chan_iax2.c (build_peer and build_user): ensure that case changes made to peer/user names are not ignored during reload operations
	(build_peer): when a peer is changed from dynamic to static mode, reset the default port number if no other has been specified

2005-11-21  Josh Roberson <josh@asteriasgi.com>

	* Makefile: Re-fix Darwin poll issues. 

2005-11-21  Russell Bryant  <russell@digium.com>

	* apps/app_osplookup.c: Properly populate the number of results. (issue #5789)

	* Makefile: Don't hard-code that poll functionality needs to be provided on Darwin.
	* apps/Makefile: Fix incorrect portion of the patch to fix 'make install' on Solaris.

	* channels/chan_iax2.c (iax2_getpeername): Return non-zero to indicate that a peer was found when using realtime (issue #5815)

2005-11-20  Russell Bryant  <russell@digium.com>
